--- a/skate_spots_app/templates/spot.html
+++ b/skate_spots_app/templates/spot.html
@@ -67,8 +67,9 @@
    <div style="background-color: transparent"  class="card text-white">
     <div class="card-body text-center">
       <span class="logo_title mt-5 text-primary h3">Add A Spot</span>
-      <form action="/create" method="post">
+      <form action="/create" method="post" enctype="multipart/form-data">
         {% csrf_token %}
+        <!-- {{ form.as_p }}  -->
         <div class="input-group form-group mt-2">
             <div style="background-color: black" class="d-block p-2 text-white">
                 <span  ">Spot Name:</span>
