fixed favicon, disabled message board

--- a/skate_spots_app/templates/home.html
+++ b/skate_spots_app/templates/home.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Let's Skate!</title>
     {% load static %}
-    <link
-      rel="shortcut icon"
-      href="{% static 'skate_spots_app/img/favicon.ico' type='image/x-icon' %}"
-    />
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
 
     <link
       href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -24,13 +21,15 @@
     />
     <style>
       #map {
-        /* height: 450px;
-        width: 100%; */
         margin: 20px 0;
         padding: 0;
-        height: 450px;
+        height: 525px;
         float: left;
         width: 100%;
+        position: relative; 
+        overflow: hidden; 
+        transform: translateZ(0px); 
+        background-color: rgb(229, 227, 223);
       }
     </style>
   </head>
@@ -57,9 +56,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="/home">Home</a>
             </li>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="/wall">Message Board</a>
-            </li>
+            </li> -->
             <li class="nav-item active">
               <a class="nav-link" href="/profile/{{user.id}}">Profile</a>
             </li>
@@ -74,7 +73,7 @@
       <div class="card bg-dark text-white">
         <div class="card-body text-center">
           <h1>Where do you want to skate?</h1>
-          <div id="map" style="position: relative; overflow: hidden; transform: translateZ(0px); background-color: rgb(229, 227, 223);"></div>
+          <div id="map"></div>
         </div>
       </div>
 
