--- a/skate_spots_app/templates/edit.html
+++ b/skate_spots_app/templates/edit.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Let's Skate!</title>
   {% load static %}	
-  <link rel="shortcut icon" href="{% static 'skate_spots_app/img/favicon.ico' type='image/x-icon' %}">
+  <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -33,9 +33,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="/home">Home</a>
           </li>
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
               <a class="nav-link" href="/wall">Message Board</a>
-            </li>
+            </li> -->
           <li class="nav-item active">
               <a class="nav-link" href="/profile/{{user.id}}">Profile</a>
             </li>
