--- a/skate_spots_app/templates/message.html
+++ b/skate_spots_app/templates/message.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Message Board</title>
   {% load static %}	
-  <link rel="shortcut icon" href="{% static 'skate_spots_app/img/favicon.ico' type='image/x-icon' %}">
+  <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -56,12 +56,12 @@
     <!-- <div class="card-body bg-dark text-left text-white d-block"> -->
        
         
-        <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{message.user.photo}}"></img>
+        <!-- <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{message.user.photo}}"></img> -->
         <span class="logo_title text-primary">{{message.user.first_name}} {{message.user.last_name}} - {{message.created_at}} </span>
 
       <!-- </div> -->
 
-        <p type="text" class="form-control my-2 ml=2">{{message.message}}</p>
+        <p type="text" class="form-control my-2 ml-2">{{message.message}}</p>
    
 
 
@@ -69,15 +69,15 @@
     {% if comment.message.id == message.id %}
     {% if comment.user != message.user  %}
     <!-- <div class="card-body bg-dark text-left my-4 mx-4 py-2 text-white d-block"> -->
-        <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{comment.user.photo}}"></img>
+        <!-- <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{comment.user.photo}}"></img> -->
       {% endif %}
       {% if comment.user == message.user  %}
       <!-- <div class="card-body bg-dark text-left my-4 mx-4 py-2 text-white d-block"> -->
-          <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{comment.user.photo}}"></img>
+          <!-- <img class="d-inline-block my-2" style="height: 30px; width: 30px;" alt="userlogo" src="media/{{comment.user.photo}}"></img> -->
         {% endif %}
 
       <span class="logo_title my-2 text-danger">{{comment.user.first_name}} {{comment.user.last_name}} - {{comment.created_at}} </span>
-        <p type="text" class="form-control my-2">{{comment.comment}}</p>
+        <p type="text" class="form-control ml-5">{{comment.comment}}</p>
     <!-- </div> -->
     {% endif %}
     {% endfor %}
