--- a/skate_spots_app/templates/index.html
+++ b/skate_spots_app/templates/index.html
@@ -11,10 +11,10 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% load static %}	
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
+    <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
   <style>
     body {
-  background: url("{% static 'img/skate.gif' %}") no-repeat center center fixed;
+  background: url("static/img/skate.gif") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
