--- a/skate_spots_app/templates/messages.html
+++ b/skate_spots_app/templates/messages.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Message Board</title>
   {% load static %}	
-  <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
+  <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
