--- a/skate_spots_app/templates/user.html
+++ b/skate_spots_app/templates/user.html
@@ -13,35 +13,20 @@
     {% load static %}
     <link
       rel="shortcut icon"
-      href="{% static 'img/favicon.ico' type='image/x-icon' %}"
+      href="static/img/favicon.ico" type="image/x-icon"
     />
     <!-- Bootstrap CSS File -->
-    <link
-      href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet"
-    />
+    <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
-    <link
-      href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}"
-      rel="stylesheet"
-    />
-    <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet" />
-    <link
-      href="{% static 'lib/ionicons/css/ionicons.min.css' %}"
-      rel="stylesheet"
-    />
-    <link
-      href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}"
-      rel="stylesheet"
-    />
-    <link
-      href="{% static 'lib/lightbox/css/lightbox.min.css' %}"
-      rel="stylesheet"
-    />
-
+    <link href="static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="static/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="static/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+  
     <!-- Main Stylesheet File -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+    <link href="static/css/style.css" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -202,18 +187,18 @@
 
     <!-- JavaScript Libraries -->
 
-    <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
-    <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'lib/popper/popper.min.js' %}"></script>
-    <script src="{% static 'lib/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'lib/easing/easing.min.js' %}"></script>
-    <script src="{% static 'lib/counterup/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'lib/counterup/jquery.counterup.js' %}"></script>
-    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'lib/lightbox/js/lightbox.min.js' %}"></script>
-    <script src="{% static 'lib/typed/typed.min.js' %}"></script>
+    <script src="static/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="static/lib/jquery/jquery.min.js"></script>
+    <script src="static/lib/popper/popper.min.js"></script>
+    <script src="static/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/lib/easing/easing.min.js"></script>
+    <script src="static/lib/counterup/jquery.waypoints.min.js"></script>
+    <script src="static/lib/counterup/jquery.counterup.js"></script>
+    <script src="static/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="static/lib/lightbox/js/lightbox.min.js"></script>
+    <script src="static/lib/typed/typed.min.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="static/js/main.js"></script>
   </body>
 </html>
